# drop-by-value

./: Cargo.toml  LICENSE  README.md
drop-by-value-derive/: Cargo.toml
drop-by-value-derive/src/: lib.rs
src/: drop_guard.rs  drop_handle.rs  drop_move_wrap.rs  drop_wrapper.rs  lib.rs
